figured out cas authentication!

--- a/frontend/loggedin.html
+++ b/frontend/loggedin.html
@@ -7,8 +7,8 @@
     <title>TigerLift</title>
   </head>
   <body>
-    <h1>Welcome to TigerLift!</h1>
-    <a href="/login">Log in</a>
+    <h1>Test - logged in as {{ netid }}</h1>
+    <a href="\logout">Log out</a>
     <script src="script.js"></script>
   </body>
 </html>
