--- a/frontend/loggedin.html
+++ b/frontend/loggedin.html
@@ -9,6 +9,64 @@
   <body>
     <h1>Test - logged in as {{ netid }}</h1>
     <a href="\logout">Log out</a>
+    <br /><br />
+    <table border="1">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Admin Netid</th>
+          <th>Max capacity</th>
+          <th>Available spots</th>
+          <th>Origin</th>
+          <th>Destination</th>
+          <th>Arrival Time</th>
+          <th>Status</th>
+          <th>Creation Time</th>
+          <th>Updated At</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for ride in rides %}
+        <tr>
+          <td>{{ ride[0] }}</td>
+          <td>{{ ride[1] }}</td>
+          <td>{{ ride[2] }}</td>
+          <td>{{ ride[3] }}</td>
+          <td>{{ ride[4] }}</td>
+          <td>{{ ride[5] }}</td>
+          <td>{{ ride[6] }}</td>
+          <td>{{ ride[7] }}</td>
+          <td>{{ ride[8] }}</td>
+          <td>{{ ride[9] }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    <a href="/addride">Add a new ride</a>
+    <a href="/deleteride">Delete ride</a>
+    <a href="/deleteallrides">Delete all rides</a>
+    <pre>{{ locations | tojson }}</pre>
+
+    <table border="1">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Column1</th>
+          <th>Column2</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for location in locations %}
+        <tr>
+          <td>{{ location[0] }}</td>
+          <td>{{ location[1] }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    <a href="/addlocation">Add a new location</a>
+    <a href="/deletelocations">Delete all locations</a>
     <script src="script.js"></script>
   </body>
 </html>
