added update_ride_request and template for myrides.html

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -7,7 +7,7 @@
     <title>TigerLift</title>
   </head>
   <body>
-    <h1>Test - logged in as {{ netid }}</h1>
+    <h1>Dashboard - logged in as {{ netid }}</h1>
     <a href="\logout">Log out</a>
     <br /><br />
     <table border="1">
