--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -7,7 +7,11 @@
     <title>TigerLift</title>
   </head>
   <body>
-    <h1>Dashboard - logged in as {{ netid }}</h1>
+    <h1>
+      Dashboard - logged in as {{ user_info['netid'] }}, {{
+      user_info['displayname'] }}, {{ user_info['year'] }}, {{ user_info['mail']
+      }}
+    </h1>
     <a href="\logout">Log out</a>
     <br /><br />
     <table border="1">
