added current_riders array to be displayed on dashboard. Also added (via postgreSQL database) additional predefined locations and an example list of current_riders array

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -27,6 +27,7 @@
           <th>Status</th>
           <th>Creation Time</th>
           <th>Updated At</th>
+          <th>Current Riders</th>
         </tr>
       </thead>
       <tbody>
@@ -42,6 +43,7 @@
           <td>{{ ride[7] }}</td>
           <td>{{ ride[8] }}</td>
           <td>{{ ride[9] }}</td>
+          <td>{{ ride[10] }}</td>
         </tr>
         {% endfor %}
       </tbody>
