added searchform on bottom, not completely done testing tho

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -73,6 +73,9 @@
     </table>
     <a href="/addlocation">Add a new location</a>
     <a href="/deletelocations">Delete all locations</a>
+
+    {% include 'searchform.html' %}
+
     <script src="script.js"></script>
   </body>
 </html>
