added link to go back to dashboard

--- a/frontend/myrides.html
+++ b/frontend/myrides.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     {{ myrides }}
+    <a href="/dashboard">Back to dashboard</a>
     <h1>My rides</h1>
     <table border="1">
       <thead>
