--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -14,6 +14,8 @@
     </h1>
     <a href="\logout">Log out</a>
     <br /><br />
+    <a href="\myrides">My Rides</a>
+    <br /><br />
     <table border="1">
       <thead>
         <tr>
