--- a/frontend/myrides.html
+++ b/frontend/myrides.html
@@ -7,6 +7,7 @@
     <title>TigerLift</title>
   </head>
   <body>
+    <a href="/dashboard">Back to dashboard</a>
     <form method="GET" action="/myrides">
       <button type="submit" name="view_type" value="posted" 
               {% if view_type == 'posted' or not view_type %} 
@@ -22,7 +23,7 @@
       </button>
   </form>
   {% if view_type == 'posted' %}
-    <h1>My rides</h1>
+    <h1>My Posted Rides</h1>
     <table border="1">
       <thead>
         <tr>
@@ -38,6 +39,7 @@
           <th>Updated At</th>
           <th>Current Riders</th>
           <th>Delete Ride</th>
+          <th>Manage Ride</th>
         </tr>
       </thead>
       <tbody>
@@ -56,16 +58,55 @@
           <td>{{ ride[9] }}</td>
           <td>
             <a href="{{ url_for('deleteride', rideid=ride[0]) }}"
-              >Delete ride</a
-            >
+              >Delete ride</a>
           </td>
+          <td></td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
   {% else %}
-    <div>hi</div>
-    {{ myreqrides }}
+  <h1>My Requested Rides</h1>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Admin Netid</th>
+        <th>Max capacity</th>
+        <th>Available spots</th>
+        <th>Origin</th>
+        <th>Destination</th>
+        <th>Arrival Time</th>
+        <th>Status</th>
+        <th>Creation Time</th>
+        <th>Updated At</th>
+        <th>Current Riders</th>
+        <th>Delete Ride</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for ride in myreqrides %}
+      <tr>
+        <td>{{ ride[0] }}</td>
+        <td>{{ ride[1] }}</td>
+        <td>{{ ride[2] }}</td>
+        <td>{{ ride[2] - ride[9]|length }}</td>
+        <td>{{ ride[3] }}</td>
+        <td>{{ ride[4] }}</td>
+        <td>{{ ride[5] }}</td>
+        <td>{{ ride[6] }}</td>
+        <td>{{ ride[7] }}</td>
+        <td>{{ ride[8] }}</td>
+        <td>{{ ride[9] }}</td>
+        <td>
+          <a href="{{ url_for('cancelriderequest', rideid=ride[0]) }}"
+            >Cancel request</a
+          >
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
   {% endif %}
     <script>
     </script>
