headings for things

--- a/frontend/addride.html
+++ b/frontend/addride.html
@@ -8,36 +8,36 @@
   </head>
 
   <body>
+    <h3>Create New Ride</h3>
     <form action="/addride" method="get">
-        <table>
-            <tr>
-            <td align="right">Max Capacity: </td>
-            <td> <input type="text" name="max_capacity" autofocus> </td>
-            </tr>
-            
-            <tr>
-            <td align="right">Source: </td>
-            <td> <input type="text" name="origin" autofocus> </td>
-            </tr>
+      <table>
+        <tr>
+          <td align="right">Max Capacity:</td>
+          <td><input type="text" name="max_capacity" autofocus /></td>
+        </tr>
 
-            <tr>
-            <td align="right">Destination: </td>
-            <td> <input type="text" name="destination" autofocus> </td>
-            </tr>
+        <tr>
+          <td align="right">Source:</td>
+          <td><input type="text" name="origin" autofocus /></td>
+        </tr>
 
-            <tr>
-            <td align="right">Arrival Time: </td>
-            <td> <input type="text" name="arrival_time" autofocus> </td>
-            </tr>
-            
-            <tr>
-              <td></td>
-              <td> <input type="submit" value="Create Ride"> </td>
-            </tr>
+        <tr>
+          <td align="right">Destination:</td>
+          <td><input type="text" name="destination" autofocus /></td>
+        </tr>
 
-        </table>
+        <tr>
+          <td align="right">Arrival Time:</td>
+          <td><input type="text" name="arrival_time" autofocus /></td>
+        </tr>
+
+        <tr>
+          <td></td>
+          <td><input type="submit" value="Create Ride" /></td>
+        </tr>
+      </table>
     </form>
 
-        <script src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
