--- a/frontend/searchform.html
+++ b/frontend/searchform.html
@@ -8,31 +8,31 @@
   </head>
 
   <body>
+    <h3>Search Rides</h3>
     <form action="/searchrides" method="get">
-        <table>
-            <tr>
-            <td align="right">Source: </td>
-            <td> <input type="text" name="origin" autofocus> </td>
-            </tr>
-            
-            <tr>
-            <td align="right">Destination: </td>
-            <td> <input type="text" name="destination" autofocus> </td>
-            </tr>
+      <table>
+        <tr>
+          <td align="right">Source:</td>
+          <td><input type="text" name="origin" autofocus /></td>
+        </tr>
 
-            <tr>
-            <td align="right">Arrival Time: </td>
-            <td> <input type="text" name="arrival_time" autofocus> </td>
-            </tr>
+        <tr>
+          <td align="right">Destination:</td>
+          <td><input type="text" name="destination" autofocus /></td>
+        </tr>
 
-            <tr>
-              <td></td>
-              <td> <input type="submit" value="Go"> </td>
-            </tr>
+        <tr>
+          <td align="right">Arrival Time:</td>
+          <td><input type="text" name="arrival_time" autofocus /></td>
+        </tr>
 
-        </table>
+        <tr>
+          <td></td>
+          <td><input type="submit" value="Go" /></td>
+        </tr>
+      </table>
     </form>
 
-        <script src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
