delete ride now deletes any associated ride requests first then deletes the ride, and my requested rides now shows request status

--- a/frontend/myrides.html
+++ b/frontend/myrides.html
@@ -98,7 +98,8 @@
         <th>Creation Time</th>
         <th>Updated At</th>
         <th>Current Riders</th>
-        <th>Delete Ride</th>
+        <th>Cancel Request</th>
+        <th>Request status</th>
       </tr>
     </thead>
     <tbody>
@@ -120,6 +121,7 @@
             >Cancel request</a
           >
         </td>
+        <td>{{ ride[10] }}</td>
       </tr>
       {% endfor %}
     </tbody>
