removed autofocus for the input fields so that it wouldn't scroll

--- a/frontend/addride.html
+++ b/frontend/addride.html
@@ -13,22 +13,22 @@
       <table>
         <tr>
           <td align="right">Max Capacity:</td>
-          <td><input type="text" name="max_capacity" autofocus /></td>
+          <td><input type="text" name="max_capacity" /></td>
         </tr>
 
         <tr>
           <td align="right">Source:</td>
-          <td><input type="text" name="origin" autofocus /></td>
+          <td><input type="text" name="origin" /></td>
         </tr>
 
         <tr>
           <td align="right">Destination:</td>
-          <td><input type="text" name="destination" autofocus /></td>
+          <td><input type="text" name="destination" /></td>
         </tr>
 
         <tr>
           <td align="right">Arrival Time:</td>
-          <td><input type="text" name="arrival_time" autofocus /></td>
+          <td><input type="text" name="arrival_time" /></td>
         </tr>
 
         <tr>
