--- a/frontend/searchform.html
+++ b/frontend/searchform.html
@@ -13,17 +13,17 @@
       <table>
         <tr>
           <td align="right">Source:</td>
-          <td><input type="text" name="origin" autofocus /></td>
+          <td><input type="text" name="origin" /></td>
         </tr>
 
         <tr>
           <td align="right">Destination:</td>
-          <td><input type="text" name="destination" autofocus /></td>
+          <td><input type="text" name="destination" /></td>
         </tr>
 
         <tr>
           <td align="right">Arrival Time:</td>
-          <td><input type="text" name="arrival_time" autofocus /></td>
+          <td><input type="text" name="arrival_time" /></td>
         </tr>
 
         <tr>
