--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -54,7 +54,7 @@
               <p>Cannot join your own ride</p>
             {% else %}
               {% if ride[4] - ride[11]|length == 0 %}
-                <p> {{ ridereqs[ride[0]] }} </p>
+                <p> ride is full </p>
               {% else %}
                 {% if ridereqs and ride[0] in ridereqs: %}
                   <p> {{ ridereqs[ride[0]] }} </p>
